; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_lck_mtx_lock_mark_destroyed.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_lck_mtx_lock_mark_destroyed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LCK_MTX_TAG_DESTROYED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @lck_mtx_lock_mark_destroyed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lck_mtx_lock_mark_destroyed(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @LCK_MTX_TAG_DESTROYED, align 4
  %11 = call i32 @ordered_store_mtx_state_release(i32* %9, i32 %10)
  br label %21

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @ordered_load_mtx_state(i32* %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @lck_mtx_interlock_lock(i32* %15, i32* %5)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @LCK_MTX_TAG_DESTROYED, align 4
  %19 = call i32 @ordered_store_mtx_state_release(i32* %17, i32 %18)
  %20 = call i32 (...) @enable_preemption()
  br label %21

21:                                               ; preds = %12, %8
  ret void
}

declare dso_local i32 @ordered_store_mtx_state_release(i32*, i32) #1

declare dso_local i32 @ordered_load_mtx_state(i32*) #1

declare dso_local i32 @lck_mtx_interlock_lock(i32*, i32*) #1

declare dso_local i32 @enable_preemption(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
